// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Quotable /> Image props should render image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  -webkit-flex: 0 0 2.5rem;
  -ms-flex: 0 0 2.5rem;
  flex: 0 0 2.5rem;
  position: relative;
  border-radius: 50%;
  overflow: hidden;
  margin-right: 1rem;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (max-width:37.31em) {
  .c1 {
    -webkit-flex-basis: 2.5rem;
    -ms-flex-preferred-size: 2.5rem;
    flex-basis: 2.5rem;
    height: 2.5rem;
    margin-right: 1rem;
  }
}

@media only screen and (min-width:37.37em) and (max-width:49.94em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 1.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

@media only screen and (min-width:85.25em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

<section
  class="c0"
>
  <div
    class="js_lazy-image c1"
  >
    <div>
      <img
        data-anim-src=""
        data-chomp-id="4815162342"
        data-format="jpg"
        data-srcset="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_80,q_80,w_80/4815162342.jpg 80w, https://i.kinja-img.com/gawker-media/image/upload/c_fit,fl_progressive,q_80,w_320/4815162342.jpg 320w, https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,fl_progressive,q_80,w_470/4815162342.jpg 470w, https://i.kinja-img.com/gawker-media/image/upload/c_scale,f_auto,fl_progressive,q_80,w_800/4815162342.jpg 800w, https://i.kinja-img.com/gawker-media/image/upload/c_scale,f_auto,fl_progressive,q_80,w_1600/4815162342.jpg 1600w"
        draggable="auto"
        sizes="80px"
        src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
      />
    </div>
  </div>
  <div
    class="c2"
  />
</section>
`;

exports[`<Quotable /> In editor should render placeholders 1`] = `
.c3 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  cursor: pointer;
  margin-bottom: 0;
  background-color: #E5E5E5;
  padding: 20px;
}

.c2:hover {
  background-color: #CCC;
  box-shadow: 0 0 0 2px #CCC;
}

.c2 svg {
  width: 40px;
  height: 40px;
}

.c1 {
  -webkit-flex: 0 0 2.5rem;
  -ms-flex: 0 0 2.5rem;
  flex: 0 0 2.5rem;
  position: relative;
  border-radius: 50%;
  overflow: hidden;
  margin-right: 1rem;
}

.c5 {
  outline: 0;
  color: #000;
  font-family: ProximaNovaCond,sans-serif;
  font-size: 1.312rem;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 1rem;
  color: #CCC;
}

.c5:last-child {
  margin-bottom: 0;
}

.c6 {
  outline: 0;
  color: #CCC;
}

.c6.c6 {
  margin-bottom: 15px;
}

.c7 {
  outline: 0;
}

.c7.c7 {
  color: #7D7D7D;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 0;
}

.c7.c7 {
  color: #CCC;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (max-width:37.31em) {
  .c1 {
    -webkit-flex-basis: 2.5rem;
    -ms-flex-preferred-size: 2.5rem;
    flex-basis: 2.5rem;
    height: 2.5rem;
    margin-right: 1rem;
  }
}

@media only screen and (min-width:37.37em) and (max-width:49.94em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 1.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

@media only screen and (min-width:85.25em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

<aside
  class="quotable-inset js_quotable"
  contenteditable="false"
>
  <section
    class="c0"
  >
    <div
      class="c1"
    >
      <figure
        class="js_quotable-thumbnail c2"
        title="Insert image"
      >
        <span
          class="c3"
        >
          <svg
            aria-label="Image icon"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5 1A2.5 2.5 0 0 1 18 3.5v11a2.5 2.5 0 0 1-2.5 2.5h-13A2.5 2.5 0 0 1 0 14.5v-11A2.5 2.5 0 0 1 2.5 1h13zM5.36 8.97L1.5 15.61c.26.24.62.39 1.01.39h12.82l-3.68-4.07-2.2 2.4a.5.5 0 0 1-.79-.07l-3.3-5.29zM15.5 2h-13C1.67 2 1 2.67 1 3.5v10.96l3.92-6.71a.5.5 0 0 1 .8-.09l.05.08 3.38 5.43 2.12-2.32a.5.5 0 0 1 .74 0l4.4 4.85c.36-.27.59-.7.59-1.2v-11c0-.83-.67-1.5-1.5-1.5zM12 4a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 1a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </figure>
    </div>
    <div
      class="c4"
    >
      <div
        class="js_quotable-header -div c5"
        data-placeholder="Header (Optional)"
      >
        Header (Optional)
      </div>
      <div
        class="js_quotable-content -div c6"
        data-placeholder="Content (Optional)"
      >
        Content (Optional)
      </div>
      <div
        class="js_quotable-attribution -div c7"
        data-placeholder="Attribution (Optional)"
      >
        Attribution (Optional)
      </div>
    </div>
  </section>
</aside>
`;

exports[`<Quotable /> In editor should render thumbnail props 1`] = `
.c3 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  cursor: pointer;
  margin-bottom: 0;
  background-color: #E5E5E5;
  padding: 20px;
}

.c2:hover {
  background-color: #CCC;
  box-shadow: 0 0 0 2px #CCC;
}

.c2 svg {
  width: 40px;
  height: 40px;
}

.c1 {
  -webkit-flex: 0 0 2.5rem;
  -ms-flex: 0 0 2.5rem;
  flex: 0 0 2.5rem;
  position: relative;
  border-radius: 50%;
  overflow: hidden;
  margin-right: 1rem;
}

.c5 {
  outline: 0;
  color: #000;
  font-family: ProximaNovaCond,sans-serif;
  font-size: 1.312rem;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

.c6 {
  outline: 0;
}

.c6.c6 {
  margin-bottom: 15px;
}

.c7 {
  outline: 0;
}

.c7.c7 {
  color: #7D7D7D;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (max-width:37.31em) {
  .c1 {
    -webkit-flex-basis: 2.5rem;
    -ms-flex-preferred-size: 2.5rem;
    flex-basis: 2.5rem;
    height: 2.5rem;
    margin-right: 1rem;
  }
}

@media only screen and (min-width:37.37em) and (max-width:49.94em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 1.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

@media only screen and (min-width:85.25em) {
  .c1 {
    -webkit-flex-basis: 5rem;
    -ms-flex-preferred-size: 5rem;
    flex-basis: 5rem;
    height: 5rem;
    margin-right: 2rem;
  }
}

<aside
  class="quotable-inset js_quotable"
  contenteditable="false"
  data-thumb-format="jpg"
  data-thumb-id="4815162342"
>
  <section
    class="c0"
  >
    <div
      class="c1"
    >
      <figure
        class="js_quotable-thumbnail c2"
        title="Insert image"
      >
        <span
          class="c3"
        >
          <svg
            aria-label="Image icon"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5 1A2.5 2.5 0 0 1 18 3.5v11a2.5 2.5 0 0 1-2.5 2.5h-13A2.5 2.5 0 0 1 0 14.5v-11A2.5 2.5 0 0 1 2.5 1h13zM5.36 8.97L1.5 15.61c.26.24.62.39 1.01.39h12.82l-3.68-4.07-2.2 2.4a.5.5 0 0 1-.79-.07l-3.3-5.29zM15.5 2h-13C1.67 2 1 2.67 1 3.5v10.96l3.92-6.71a.5.5 0 0 1 .8-.09l.05.08 3.38 5.43 2.12-2.32a.5.5 0 0 1 .74 0l4.4 4.85c.36-.27.59-.7.59-1.2v-11c0-.83-.67-1.5-1.5-1.5zM12 4a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 1a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </figure>
    </div>
    <div
      class="c4"
    >
      <div
        class="js_quotable-header -div c5"
        data-placeholder="Header (Optional)"
      >
        This is Patrick.
      </div>
      <div
        class="js_quotable-content -div c6"
        data-placeholder="Content (Optional)"
      >
        This is Patrick.
      </div>
      <div
        class="js_quotable-attribution -div c7"
        data-placeholder="Attribution (Optional)"
      >
        This is Patrick.
      </div>
    </div>
  </section>
</aside>
`;

exports[`<Quotable /> In editor should render with values 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  border-radius: 50%;
  cursor: pointer;
}

.c3 {
  outline: 0;
  color: #000;
  font-family: ProximaNovaCond,sans-serif;
  font-size: 1.312rem;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 1rem;
}

.c3:last-child {
  margin-bottom: 0;
}

.c4 {
  outline: 0;
}

.c4.c4 {
  margin-bottom: 15px;
}

.c5 {
  outline: 0;
}

.c5.c5 {
  color: #7D7D7D;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

<aside
  class="quotable-inset js_quotable"
  contenteditable="false"
>
  <section
    class="c0"
  >
    <img
      class="js_quotable-thumbnail c1"
      data-thumb-format="jpg"
      data-thumb-id="4815162342"
      src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_200,q_80,w_200/4815162342.jpg"
      title="Change image"
    />
    <div
      class="c2"
    >
      <div
        class="js_quotable-header -div c3"
        data-placeholder="Header (Optional)"
      >
        This is Patrick.
      </div>
      <div
        class="js_quotable-content -div c4"
        data-placeholder="Content (Optional)"
      >
        This is Patrick.
      </div>
      <div
        class="js_quotable-attribution -div c5"
        data-placeholder="Attribution (Optional)"
      >
        This is Patrick.
      </div>
    </div>
  </section>
</aside>
`;

exports[`<Quotable /> InlineNode props should render attribution 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  outline: 0;
}

.c2.c2 {
  color: #7D7D7D;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <p
      class="c2"
    >
      This is Patrick.
    </p>
  </div>
</section>
`;

exports[`<Quotable /> InlineNode props should render content 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  outline: 0;
}

.c2.c2 {
  margin-bottom: 15px;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <p
      class="c2"
    >
      This is Patrick.
    </p>
  </div>
</section>
`;

exports[`<Quotable /> InlineNode props should render header 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 2rem;
  margin-bottom: 2rem;
  max-width: 636px;
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  outline: 0;
  color: #000;
  font-family: ProximaNovaCond,sans-serif;
  font-size: 1.312rem;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 1rem;
}

.c2:last-child {
  margin-bottom: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }
}

@media only screen and (min-width:50em) and (max-width:63.69em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:63.75em) and (max-width:85.19em) {
  .c0 {
    max-width: 636px;
  }
}

@media only screen and (min-width:85.25em) {
  .c0 {
    max-width: 636px;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <h4
      class="c2"
    >
      This is Patrick.
    </h4>
  </div>
</section>
`;
